--- a/index.html
+++ b/index.html
@@ -8,8 +8,29 @@
 </head>
 <body>
 <h1>Zufallshandel</h1>
+<p>Zwei Spieler. Eine Verhandlung. Jeweils geheime Informationen.</p>
 <button onclick="generate()">Generiere Szenario</button>
 <div id="scenario">
   Button anklicken um Szenario zu generieren ...
+
+<p class="important">Bitte folge den Anweisungen für die Übung
+und zieh es bis zum Ende durch.
+Im anschließenden Gespräch ist Raum für Kritik.</p>
+<p>Viel Spaß!</p>
 </div>
+<hr style="clear: both;" />
+<button onclick="starttimer()">Start from 0</button>
+<button onclick="pausetimer()">Pause/Weiter</button>
+<span id="timer">00:00</span>
+<hr style="clear: both;" />
+<p>Abschließende Fragen:</p>
+<ul>
+<li>Welche Argumente hätte man noch bringen können?</li>
+<li>Würdest du mit deinem Gegenüber gerne wieder verhandeln?</li>
+<li>Wer hat gewonnen? Keiner? Beide?</li>
+<li>Welche Erwartungen hattest du zu Beginn?</li>
+<li>Wie effektiv wer die Verhandlungsstrategie?</li>
+<li>Wer das Ergebnis, das best-mögliche?</li>
+<li>Welche Gefühle waren im Spiel?</li>
+</ul>
 </body>
