First ideas of user interface: tabs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 	<div id="board">
 		Counter is at <span id="counter"></span> now.
 	</div>
+	<div id="game">
+		<section id="overview">
+			<h2><a href="#overview">Overview</a></h2>
+			<p>Overview of your inn</p>
+		</section>
+		<section id="acq">
+			<h2><a href="#acq">Acquisition</a></h2>
+			<p>What and how much to buy each month?</p>
+		</section>
+		<section id="sales">
+			<h2><a href="#sales">Sales</a></h2>
+			<p>What did we sell?</p>
+		</section>
+	</div>
 	<div id="backstore" style="visibility:none;">
 	</div>
 	<script type="text/javascript" src="incremental_inn.js"></script>
