some styling and design ideas

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 	<div id="game">
 		<section id="overview">
 			<h2><a href="#overview">Overview</a></h2>
-			<p>Overview of your inn</p>
+			<div id="timeline">
+				<div class="item">
+					In the Lost Swine the innkeeper Gowise sells common Ale from Riaglicor.
+				</div>
+				<div class="item">
+					In the Drinking Pony the innkeeper Nalash sells common Wine from Sarorfro.
+				</div>
+				<div class="item">
+					In the Prancing Deer the innkeeper Feitu sells fine Beer from Saugotharan.
+				</div>
+			</div>
 		</section>
 		<section id="acq">
 			<h2><a href="#acq">Acquisition</a></h2>
