Generate and show Inn name

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<div id="board">
 		Counter is at <span id="counter"></span> now.
 	</div>
+	<h1 id="inntitle">A Random Inn</h1>
 	<div id="game">
 		<section id="overview">
 			<h2><a href="#overview">Overview</a></h2>
