show beverages list

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 		</section>
 		<section id="acq">
 			<h2><a href="#acq">Acquisition</a></h2>
+			<div class="tabcontent">
 			<p>What and how much to buy each month?</p>
+			<table id="beverageList"></table>
+			</div>
 		</section>
 		<section id="sales">
 			<h2><a href="#sales">Sales</a></h2>
