add reset button

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 			<table id="beverageList"></table>
 			</div>
 		</section>
-		<section id="sales">
-			<h2><a href="#sales">Sales</a></h2>
-			<p>What did we sell?</p>
+		<section id="options">
+			<h2><a href="#options">Options</a></h2>
+			<table>
+				<tr><td><a href="javascript:Game.reset()">Reset</a></td>
+					<td>everything to initial state</td></tr>
+			</table>
 		</section>
 	</div>
 	<div id="backstore" style="visibility:none;">
