show money stats in sidebar

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 			</table>
 		</section>
 	</div>
+	<div id="sidebar">
+		<table>
+			<tr><td>World money</td><td id="stat-worldmoney"></td></tr>
+			<tr><td>City money</td><td id="stat-citymoney"></td></tr>
+			<tr><td>Inn money</td><td id="stat-innmoney"></td></tr>
+			<tr><td>Woods money</td><td id="stat-woodmoney"></td></tr>
+		</table>
+	</div>
 	<div id="backstore" style="visibility:none;">
 	</div>
 	<script type="text/javascript" src="incremental_inn.js"></script>
