heroes take loot

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 			<tr><td>City money</td><td id="stat-citymoney"></td></tr>
 			<tr><td>Inn money</td><td id="stat-innmoney"></td></tr>
 			<tr><td>Woods money</td><td id="stat-woodmoney"></td></tr>
+			<tr><td>City Heroes</td><td id="stat-cityheroes"></td></tr>
+			<tr><td>Wood Heroes</td><td id="stat-woodheroes"></td></tr>
 		</table>
 	</div>
 	<div id="backstore" style="visibility:none;">
