coloring to background image

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 			<tr><td>Wood Heroes</td><td id="stat-woodheroes"></td></tr>
 		</table>
 	</div>
+	<footer>
+	<p>
+	A game by <a href="mailto:qznc@web.de">qznc</a>, though the
+	<a href="http://mintyfreshmangos.deviantart.com/art/DeaApp-Frantasia-539766195">background image source</a>
+	is elsewhere.
+	</p>
+	</footer>
 	<div id="backstore" style="visibility:none;">
 	</div>
 	<script type="text/javascript" src="incremental_inn.js"></script>
