--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<div id="actions">
 		<div id="always_actions">
 			<ul>
-				<li><button id="readBooks">Read books</button></li>
-				<li><button id="makePause">Take some time off</button></li>
+				<li><button id="readBooks">read</button></li>
+				<li><button id="getSleep">sleep</button></li>
 			</ul>
 		</div>
 		<div id="notifications">
