show and hide according to sanity

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 	<h1>Cthulhu Calls</h1>
 	<div id="actions">
 		<div id="always_actions">
-			<ul>
-				<li><button id="readBooks">read</button></li>
-				<li><button id="getSleep">sleep</button></li>
-			</ul>
+			<button id="readBooks">read</button>
+			<button id="getSleep" class="hidden">sleep</button>
+			<button id="writeDown" class="hidden">write</button>
 		</div>
 		<div id="notifications">
 			<div class="notification">
@@ -33,5 +32,6 @@
 	A game by <a href="mailto:qznc@web.de">qznc</a>
 	</p>
 	</footer>
+	<div id="hiddenParent"></div>
 	<script type="text/javascript" src="incremental_inn.js"></script>
 </body>
