--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div id="debug">
 			<table>
 				<tr><td>Knowledge</td><td id="stat-knowledge"></td></tr>
+				<tr><td>Safe Knowledge</td><td id="stat-safeknowledge"></td></tr>
 				<tr><td>Sanity</td><td id="stat-sanity"></td></tr>
 			</table>
 			<button id="reset">Reset Game</button>
