--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Incremental Inn</title>
-	<link rel="stylesheet" type="text/css" href="incremental_inn.css" />
+	<title>IncCth</title>
+	<link rel="stylesheet" type="text/css" href="inccth.css" />
 </head>
 <body>
 	<div id="actions">
@@ -30,5 +30,5 @@
 	</p>
 	</footer>
 	<div id="hiddenParent"></div>
-	<script type="text/javascript" src="incremental_inn.js"></script>
+	<script type="text/javascript" src="inccth.js"></script>
 </body>
