--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 		</div>
 		<div id="debug">
 			<table>
-				<tr><td>Knowledge</td><td id="stat-knowledge"></td></tr>
-				<tr><td>Safe Knowledge</td><td id="stat-safeknowledge"></td></tr>
+				<tr><td>Your Knowledge</td><td id="stat-knowledge"></td></tr>
+				<tr><td>Common Knowledge</td><td id="stat-safeknowledge"></td></tr>
 				<tr><td>Sanity</td><td id="stat-sanity"></td></tr>
 			</table>
-			<button id="reset">Reset Game</button>
 		</div>
 		<div class="clear"></div>
 	</div>
 	<footer>
 	<p>
-	A game by <a href="mailto:qznc@web.de">qznc</a>
+	A game by <a href="mailto:qznc@web.de">qznc</a>. For a completely new beginning, you can <button id="reset">Reset The Game</button>.
 	</p>
 	</footer>
 	<div id="hiddenParent"></div>
