hide debug bar partially as well

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		</div>
 		<div id="debug">
 			<table>
-				<tr><td>Your Knowledge</td><td id="stat-knowledge"></td></tr>
-				<tr><td>Common Knowledge</td><td id="stat-safeknowledge"></td></tr>
-				<tr><td>Sanity</td><td id="stat-sanity"></td></tr>
+				<tr id="stat-tr-knowledge" class="hidden"><td>Your Knowledge</td><td id="stat-knowledge"></td></tr>
+				<tr id="stat-tr-safeKnowledge" class="hidden"><td>Common Knowledge</td><td id="stat-safeknowledge"></td></tr>
+				<tr id="stat-tr-sanity" class="hidden"><td>Sanity</td><td id="stat-sanity"></td></tr>
 			</table>
 		</div>
 		<div class="clear"></div>
