--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>IncCth</title>
 	<link rel="stylesheet" type="text/css" href="inccth.css" />
+	<meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<div id="actions">
